--- a/src/styles.scss
+++ b/src/styles.scss
@@ -132,3 +132,10 @@ button:hover {
   font-weight: bold;
   cursor: pointer;
 }
+
+.mensaje {
+  color: red;
+  font-weight: bold;
+  margin-top: 10px;
+  text-align: center;
+}
