--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -17,6 +17,9 @@
 
     <main class="main-content">
       <router-outlet></router-outlet>
-    </main>
+      
+  <button (click)="cerrarSesion()" class="logout-button">Cerrar sesión</button>
+
+</main>
   </div>
 </div>
