login mensajes error

--- a/src/app/auth/login/login.html
+++ b/src/app/auth/login/login.html
@@ -32,7 +32,7 @@
         <a href="#">¿Olvidaste tu contraseña?</a>
       </div>
 
-      <button type="submit" [disabled]="!form.valid">Entrar</button>
+      <button type="submit">Entrar</button>
       <p class="mensaje" *ngIf="mensaje">{{ mensaje }}</p>
     </form>
   </div>
