--- a/src/app/votantes/registro/registro.html
+++ b/src/app/votantes/registro/registro.html
@@ -75,15 +75,16 @@
         </div>
       </div>
       <div class="input-group">
-        <label for="perfil">Perfil:</label>
-        <select [(ngModel)]="perfilField" name="perfil" required #perfilField="ngModel">
-          <option value="" disabled selected>Selecciona un perfil</option>
-          <option value="Votante">Votante</option>
-          <option value="Administrador">Administrador</option>
-        </select>
-        <div *ngIf="perfilField.invalid && perfilField.touched" class="error">
-          Selecciona un perfil
-        </div>
+        <label>Perfil:</label>
+        <label
+          ><input type="radio" [(ngModel)]="perfil" name="perfil" value="Votante" required />
+          Votante</label
+        >
+        <label
+          ><input type="radio" [(ngModel)]="perfil" name="perfil" value="Administrador" required />
+          Administrador</label
+        >
+        <div *ngIf="!perfil" class="error">Selecciona un perfil</div>
       </div>
 
       <button type="submit">Registrarse</button>
