--- a/src/app/auth/login/login.html
+++ b/src/app/auth/login/login.html
@@ -1,39 +1,51 @@
 <div class="login-container">
   <div class="login-card">
     <div class="logo-container">
-      <img src="logo.jpg" alt="Logo UTN" />
-      <h2>Acceso UTN</h2>
+      <img src="../../../assets/logo.jpg" alt="Logo UTN" style="border-radius: 15px; " />
     </div>
 
-    <form (ngSubmit)="iniciarSesion()" #form="ngForm">
-      <div class="input-group">
-        <i class="fa fa-id-card"></i>
-        <input
-          [(ngModel)]="identificacion"
-          name="identificacion"
-          placeholder="Identificación"
-          required
-        />
-      </div>
+    <form [formGroup]="userForm" (ngSubmit)="iniciarSesion()" #form="ngForm">
 
       <div class="input-group">
-        <i class="fa fa-lock"></i>
-        <input
-          [(ngModel)]="contrasenna"
-          name="contrasenna"
-          type="password"
-          placeholder="Contraseña"
-          required
-        />
+
+        <div class="input-field-wrapper">
+          <i class="fa fa-id-card"></i>
+          <input formControlName="identificacion" name="identificacion" placeholder="Identificación" required />
+        </div>
+
+        @if (errorHandling('identificacion', 'required')) {
+        <mat-error>
+          La identificación es <strong>requerida</strong>.
+        </mat-error>
+        }
+      </div>
+
+
+      <div class="input-group">
+        <div class="input-field-wrapper">
+          <i class="fa fa-lock"></i>
+          <input [type]="passwordFieldType" formControlName="contrasenna" name="contrasenna" placeholder="Contraseña"
+            required />
+          <button type="button" style="position: relative; top: 10px; bottom: 0; left: 60px; display: flex; align-items: last baseline;  background-color: transparent;"
+            (click)="togglePasswordVisibility()">
+            <i class="fas" style="color:#8a9196"
+              [ngClass]="passwordFieldType === 'password' ? 'fa-eye' : 'fa-eye-slash'"></i>
+          </button>
+        </div>
+
+        @if (errorHandling('contrasenna', 'required')) {
+        <mat-error>
+          La contraseña es <strong>requerida</strong>.
+        </mat-error>
+        }
       </div>
 
       <div class="options-row">
         <label> <input type="checkbox" /> Recordarme </label>
-        <a href="#">¿Olvidaste tu contraseña?</a>
+        <a href="olvidar">¿Olvidaste tu contraseña?</a>
       </div>
 
-      <button type="submit">Entrar</button>
-      <p class="mensaje" *ngIf="mensaje">{{ mensaje }}</p>
+      <button type="submit" style="background-color: #f57c00;">Iniciar Sesión</button>
     </form>
   </div>
 </div>
