--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,43 +15,48 @@ body {
 
 .login-card {
   background-color: rgba(255, 255, 255, 0.05);
-  padding: 40px;
+  padding: 50px 40px;
   border-radius: 12px;
   width: 100%;
-  max-width: 400px;
+  max-width: 480px;
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
 }
 
-.logo-section {
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.logo-section img {
-  max-width: 100px;
+.logo-container img {
+  display: block;
+  margin: 12px auto;
+  max-width: 150px; 
   height: auto;
-  margin-bottom: 10px;
   filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.2));
-}
-
-.logo-section h2 {
-  margin: 0;
-  font-size: 24px;
-  color: #ffffff;
 }
 
 .input-group {
   display: flex;
-  align-items: center;
-  background-color: #ffffff;
+  flex-direction: column;
+
   border-radius: 6px;
-  padding: 10px;
-  margin-bottom: 20px;
+  padding: 5px 0;
+  margin-bottom: 5px;
+  height: auto;
 }
 
 .input-group i {
   margin-right: 10px;
-  color: #052c65;
+  color: rgb(5, 44, 101);
+  display: flex;
+  flex-direction: column;
+}
+
+.input-field-wrapper {
+  position: relative;
+
+  border: 1px solid rgb(5, 44, 101);
+  border-radius: 5px;
+  height: 50px;
+  width: 100%;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
 }
 
 .input-group input {
@@ -60,6 +65,29 @@ body {
   flex: 1;
   font-size: 16px;
   color: #052c65;
+}
+
+/* Estilo del ícono */
+.input-field-wrapper i {
+  position: absolute;
+  left: 15px;
+  color: rgb(5, 44, 101);
+  z-index: 10;
+  font-size: 1.1em;
+}
+
+/* Estilo del Input */
+.input-field-wrapper input {
+  flex-grow: 1;
+
+  border: none;
+  outline: none;
+  background: transparent;
+
+  padding: 0 15px;
+  padding-left: 45px;
+  height: 100%;
+  padding-right: 50px;
 }
 
 .options-row {
@@ -111,6 +139,7 @@ button:hover {
   filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.2));
 }
 
+//Normal Color
 button {
   background-color: #f57c00; // naranja UTN
 }
@@ -133,9 +162,8 @@ button:hover {
   cursor: pointer;
 }
 
-.mensaje {
-  color: red;
-  font-weight: bold;
-  margin-top: 10px;
-  text-align: center;
+mat-error {
+  color: firebrick !important;
+  font-size: medium !important;
+  margin: 0px 5px !important;
 }
