--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -7,6 +7,8 @@
 
     <main class="main-content">
       <router-outlet>
+        <img src="../../../assets/logo.jpg" alt="Logo UTN" style="border-radius: 15px; " />
+
       </router-outlet>
     </main>
   </div>
