--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,11 @@
+@use 'tailwindcss';
+
+html,
+body {
+  height: 100%;
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -166,4 +174,8 @@ mat-error {
   color: firebrick !important;
   font-size: medium !important;
   margin: 0px 5px !important;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
 }
