--- a/src/app/perfiles/perfiles-index/perfiles-index.component.scss
+++ b/src/app/perfiles/perfiles-index/perfiles-index.component.scss
@@ -56,6 +56,10 @@ mat-input {
   background-color: #e6510053;
 }
 
+.filter-container {
+  background-color: aqua;
+}
+
 .icon-margin-right {
   margin-right: 0.5rem;
 }
