--- a/src/app/votantes/votantes-create/votantes-create.component.html
+++ b/src/app/votantes/votantes-create/votantes-create.component.html
@@ -55,7 +55,7 @@
                         <p class="text-sm font-semibold text-[#344054] mb-1">Tipo de Perfil</p>
                         <p class="text-base font-medium text-gray-800">{{ userForm.get('Perfil')?.value || 'No Asignado'
                             }}</p>
-                        <p class="text-xs text-gray-500 mt-1">No se puede actualizar el perfil en modo Edición.</p>
+                        <p class="text-xs text-gray-500 mt-1">No se puede actualizar el tipo de perfil</p>
                     </div>
                     }
 
@@ -91,7 +91,7 @@
 
 
                     <div>
-                        <label for="name" class="block mb-2 text-sm font-medium text-[#344054]">Nombre</label>
+                        <label for="Nombre" class="block mb-2 text-sm font-medium text-[#344054]">Nombre</label>
                         <input type="text" id="Nombre" placeholder="Nombre completo" name="Nombre"
                             formControlName="Nombre"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
