--- a/src/app/perfiles/perfiles-delete/perfiles-delete.component.html
+++ b/src/app/perfiles/perfiles-delete/perfiles-delete.component.html
@@ -17,7 +17,8 @@
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
             d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
         </svg>
-        <h3 class="mb-5 text-lg font-normal text-gray-500 ">¿Está seguro de querer eliminar esta elección?</h3>
+        <h3 class="mb-5 text-lg font-normal text-gray-500 ">¿Estás seguro de querer eliminar este perfil?
+            ?</h3>
         <button type="button" (click)="onSubmit()"
           class="mt-4 w-full text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center transition duration-200"
           style="background-color: #e65100;">Confirmar
