--- a/src/app/perfiles/perfiles-index/perfiles-index.component.html
+++ b/src/app/perfiles/perfiles-index/perfiles-index.component.html
@@ -9,7 +9,7 @@
             <!-- Contenedor principal para aplicar estilos SCSS -->
 
             <!-- Encabezado y botón de acción -->
-            <h1 class="page-title">Listado de Sedes</h1>
+            <h1 class="page-title">Listado de Perfiles</h1>
 
             <div class="table-card">
 
@@ -20,7 +20,7 @@
                         <button class="btncrear hover:bg-[#e6510053]" style="background-color: #e65100; color: #ffffff;"
                             (click)="crear()" mat-raised-button>
                             <i class="fas fa-plus icon-margin-right"></i>
-                            Nuevo Sede
+                            Nuevo Perfil
                         </button>
                     </div>
 
@@ -32,21 +32,21 @@
                     <table mat-table [dataSource]="dataSource" matSort class="w-full text-sm text-left rtl:text-right ">
 
                         <!-- Columna: Id -->
-                        <ng-container matColumnDef="IdSede">
+                        <ng-container matColumnDef="IdPerfil">
                             <th scope="col" class="border text-xs text-black border-white colcolor" mat-header-cell
                                 *matHeaderCellDef mat-sort-header> Identificador </th>
                             <td scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap" mat-cell
-                                *matCellDef="let row"> {{ row.IdSede }} </td>
+                                *matCellDef="let row"> {{ row.IdPerfil }} </td>
                         </ng-container>
 
                         <!-- Columna: Nombre -->
-                        <ng-container matColumnDef="Nombre">
+                        <ng-container matColumnDef="Descripcion">
                             <th scope="col" class=" border text-xs text-black border-white colcolor" mat-header-cell
                                 *matHeaderCellDef mat-sort-header>
-                                Nombre </th>
+                                Descripción </th>
                             <td scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap" mat-cell
                                 *matCellDef="let row">
-                                {{ row.Nombre }} </td>
+                                {{ row.Descripcion }} </td>
                         </ng-container>
 
                         <!-- Columna: Acciones -->
@@ -56,13 +56,12 @@
 
                             <td mat-cell *matCellDef="let row">
                                 <div class="flex  gap-5">
-
-                                    <button mat-icon-button (click)="update(row.IdSede)">
+                                    <button mat-icon-button (click)="update(row.IdPerfil)">
                                         <mat-icon>edit</mat-icon>
                                     </button>
 
                                     <!-- Botón Eliminar / Desactivar -->
-                                    <button mat-icon-button (click)="delete(row.IdSede)" style="color: #b52121">
+                                    <button mat-icon-button (click)="delete(row.IdPerfil)" style="color: #b52121">
                                         <mat-icon>delete</mat-icon>
                                     </button>
                                 </div>
@@ -92,5 +91,5 @@
     </div>
 </div>
 
-<app-sedes-create #sedeFormModal></app-sedes-create>
-<app-sedes-delete #deleteSedeModal></app-sedes-delete>
+<app-perfiles-create #perfilFormModal></app-perfiles-create>
+<app-perfiles-delete #deletePerfilModal></app-perfiles-delete>
