--- a/src/app/votantes/votantes-index/votantes-index.component.html
+++ b/src/app/votantes/votantes-index/votantes-index.component.html
@@ -14,28 +14,26 @@
       <div class="table-card">
 
         <!-- Contenedor de Filtros -->
-        <div class="filters-container flex w-full h-fit p-4 px-8 bg-white z-10 relative">
+        <div class="flex w-full h-fit p-4 px-10 bg-white z-10 relative">
+          <div class="max-w-md mx-auto pt-4 pr-5">
+            <select id="role-filter" name="selectedRole" [(ngModel)]="selectedRole" (change)="onFilterChange()"
+              class="text-[#667085] font-medium rounded-lg text-sm px-5 py-2.5 inline-flex items-center border bg-white">
 
-          <!-- Filtro por Perfil / Rol -->
-          <mat-form-field class="max-w-sm mx-auto px-3">
-            <mat-select [(ngModel)]="selectedRole" (selectionChange)="onFilterChange()"
-              class="h-fit font-semibold rounded-lg text-sm inline-flex items-center border-gray-300"
-              panelClass="role-select-panel-fix">
+              <!-- Opciones de roles. Asumo que `roles` tiene `name` y `label` -->
               @for (rol of roles; track rol.name) {
-              <mat-option [value]="rol.name">
+              <option [value]="rol.name">
                 {{ rol.label }}
-              </mat-option>
+              </option>
               }
-            </mat-select>
-          </mat-form-field>
-
+            </select>
+          </div>
 
           <!-- Filtro por Cédula / Identificación -->
           <div class="max-w-md mx-auto">
             <mat-form-field class="relative">
               <input matInput type="search" placeholder="Buscar por identificación" [(ngModel)]="searchCedula"
                 (keyup)="onFilterChange()"
-                class="block w-full h-11 p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-transparent focus:ring-indigo-600 focus:border-indigo-600">
+                class="block w-full h-11 p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg  focus:ring-indigo-600 focus:border-indigo-600">
               <mat-icon matSuffix>search</mat-icon>
             </mat-form-field>
           </div>
@@ -43,8 +41,8 @@
           <span class="example-spacer"></span>
 
           <div>
-            <button class="btncrear hover:bg-[#e6510053]" style="background-color: #e65100; color: #ffffff;" (click)="crear()"
-              mat-raised-button>
+            <button class="btncrear hover:bg-[#e6510053]" style="background-color: #e65100; color: #ffffff;"
+              (click)="crear()" mat-raised-button>
               <i class="fas fa-plus icon-margin-right"></i>
               Nuevo Votante
             </button>
@@ -114,7 +112,7 @@
                   </button>
 
                   <!-- Botón Eliminar / Desactivar -->
-                  <button mat-icon-button (click)="delete(row.Identificacion)">
+                  <button mat-icon-button (click)="delete(row._id)" style="color: #b52121">
                     <mat-icon>delete</mat-icon>
                   </button>
                 </div>
