HU3 - HU4 Listo

--- a/src/app/candidatos/candidatos-index/candidatos-index.component.html
+++ b/src/app/candidatos/candidatos-index/candidatos-index.component.html
@@ -168,5 +168,6 @@
         </main>
     </div>
 </div>
-
+<app-candidatos-create #candidatoFormModal></app-candidatos-create>
 <app-candidatos-delete #deleteCandidatoModal></app-candidatos-delete>
+<app-candidatos-detail #detailCandidatoModal></app-candidatos-detail>
