--- a/src/app/elecciones/elecciones-index/elecciones-index.component.html
+++ b/src/app/elecciones/elecciones-index/elecciones-index.component.html
@@ -71,7 +71,7 @@
                         <button class="btncrear hover:bg-[#e6510053]" style="background-color: #e65100; color: #ffffff;"
                             (click)="crear()" mat-raised-button>
                             <i class="fas fa-plus icon-margin-right"></i>
-                            Nuevo Partido
+                            Nueva Elección
                         </button>
                     </div>
                 </div>
@@ -165,3 +165,4 @@
 
 <app-elecciones-create #eleccionFormModal></app-elecciones-create>
 <app-elecciones-delete #deleteEleccionModal></app-elecciones-delete>
+<app-elecciones-detail #eleccionDetalleModal></app-elecciones-detail>
