--- a/src/app/candidatos/candidatos-detail/candidatos-detail.component.html
+++ b/src/app/candidatos/candidatos-detail/candidatos-detail.component.html
@@ -1,1 +1,63 @@
-<p>candidatos-detail works!</p>
+<!-- Main modal -->
+<div id="authentication-modal" tabindex="-1" aria-hidden="true"
+    class="fixed inset-0 z-50 flex items-center justify-center bg-gray-500 bg-opacity-75 scrollable"
+    [class.hidden]="!isVisible">
+    <div class="relative p-4 w-full max-w-md max-h-full">
+        <!-- Modal content -->
+        <div class="relative bg-white rounded-lg shadow" style="color: rgb(5, 44, 101);">
+            <div class="px-5 pt-5 flex justify-end">
+                <button type="button" (click)="closeModal()"
+                    class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center">
+                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 14 14">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                    </svg>
+                    <span class="sr-only">Close modal</span>
+                </button>
+            </div>
+            <!-- Modal header -->
+            <div class="flex items-center justify-center">
+                <div>
+                    <h3 class="text-2xl text-center font-semibold text-[#252b36] pb-8">
+                        Detalle del candidato
+                    </h3>
+                </div>
+            </div>
+            <!-- Modal body -->
+            <div class="p-4 md:p-5">
+                <!-- Formulario para crear o actualizar usuario -->
+                <form [formGroup]="userForm" novalidate class="flex flex-col gap-4">
+
+                    <div>
+                        <label for="PerfilId" class="block mb-2 text-sm font-medium text-[#667085]">Tipo de candidato
+                        </label>
+                        <input [readOnly]="true" type="text" id="PerfilId" name="PerfilId" formControlName="PerfilId"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                             />
+                    </div>
+
+                    <div>
+                        <label for="Nombre" class="block mb-2 text-sm font-medium text-[#667085]">Nombre del
+                            candidato</label>
+                        <input [readOnly]="true" type="text" id="Nombre" placeholder="Nombre completo" name="Nombre"
+                            formControlName="Nombre"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                             />
+                    </div>
+
+                    <div>
+                        <div>
+                            <label for="Partido" class="block mb-2 text-sm font-medium text-[#344054]">Partido
+                            </label>
+                            <input [readOnly]="true" type="text" name="Partido" id="Partido" formControlName="Partido"
+                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                                 />
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
