HU5 - Listado de la partidos disponibles

--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,46 +1,61 @@
 <!-- menu.component.html -->
 <div class="sidebar-container">
-  
+
   <!-- Inicio Botones -->
   <div class="menu-items-group">
-    
+
     <button class="menu-item" (click)="onItemSelected({ displayName: 'Dashboard', route: '/dashboard' })"
       [class.activo]="router.isActive('/dashboard', true)">
       <img class="icono" src="../../../assets/menu-items/panel.png" alt="Dashboard" />
       <p>Dashboard</p>
     </button>
-    
+
+    @if(this.rol === 'Administrador') {
+
     <button class="menu-item" (click)="onItemSelected({ displayName: 'Votantes', route: '/votantes' })"
       [class.activo]="router.isActive('/votantes', true)">
-      <img class="icono" src="../../../assets/menu-items/votante.png" alt="Votantes"/>
+      <img class="icono" src="../../../assets/menu-items/votante.png" alt="Votantes" />
       <p>Votantes</p>
     </button>
-    
+
     <button class="menu-item" (click)="onItemSelected({ displayName: 'Elecciones', route: '/elecciones' })"
       [class.activo]="router.isActive('/elecciones', true)">
-      <img class="icono" src="../../../assets/menu-items/eleccion.png" alt="Elecciones"/>
+      <img class="icono" src="../../../assets/menu-items/eleccion.png" alt="Elecciones" />
       <p>Elecciones</p>
     </button>
-    
+
     <button class="menu-item" (click)="onItemSelected({ displayName: 'Candidatos', route: '/candidatos' })"
       [class.activo]="router.isActive('/candidatos', true)">
-      <img class="icono" src="../../../assets/menu-items/candidato.png" alt="Candidatoss"/>
+      <img class="icono" src="../../../assets/menu-items/candidato.png" alt="Candidatoss" />
       <p>Candidatos</p>
     </button>
 
     <button class="menu-item" (click)="onItemSelected({ displayName: 'Reportes', route: '/reportes' })"
-        [class.activo]="router.isActive('/reportes', true)"
-    >
+      [class.activo]="router.isActive('/reportes', true)">
       <img class="icono" src="../../../assets/menu-items/reporte-de-negocios.png" alt="Reportes" />
       <p>Reportes</p>
     </button>
-    
+    }
+
+    @else {
+    <button class="menu-item" (click)="onItemSelected({ displayName: 'Vigentes', route: '/vigentes' })"
+      [class.activo]="router.isActive('/vigentes', true)">
+      <img class="icono" src="../../../assets/menu-items/candidato.png" alt="Candidatos" />
+      <p>Candidatos</p>
+    </button>
+
+    <button class="menu-item" (click)="onItemSelected({ displayName: 'Votaciones', route: '#' })"
+      [class.activo]="router.isActive('#', true)">
+      <img class="icono" src="../../../assets/menu-items/mivoto.png" alt="Votaciones" />
+      <p>Mis votaciones</p>
+    </button>
+    }
     <button class="menu-item" (click)="onItemSelected({ displayName: 'Ajustes', route: '/ajustes' })"
       [class.activo]="router.isActive('/ajustes', true)">
       <img class="icono" src="../../../assets/menu-items/ajustes.png" alt="Ajustes" />
       <p>Ajustes</p>
     </button>
-    
+
     <button class="menu-item" (click)="onItemSelected({ displayName: 'Cerrar Sesión', route: '/login' })"
       [class.activo]="router.isActive('/logout', true)">
       <img class="icono" src="../../../assets/menu-items/cerrar-sesion.png" alt="Cerrar Sesión" />
