--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="user-info">
     <div class="user-details">
-      <span>Bienvenid@ <i>{{ nombre }}</i></span>
+      <span>Bienvenid(a) <i>{{ nombre }}</i></span>
       <small>{{ rol }}</small>
     </div>
   </div>
